"Сделана доработка проекта"